add Setup for Entity Framewok Core With PostgreSQL

--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -18,8 +18,10 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                     
-                      
+                        <li class="nav-item">
+                            @*<a asp-controller="Users" asp-action="Index" class="nav-link active">Usuarios</a>*@
+                            <a asp-controller="Users" asp-action="Index" class="nav-link " >Usuários</a>
+                        </li>
                     </ul>
                 </div>
             </div>
