--- a/WebApp/Views/Users/Index.cshtml
+++ b/WebApp/Views/Users/Index.cshtml
@@ -1,11 +1,12 @@
-﻿@{
+﻿@model IEnumerable<User>
+@{
     ViewData["Title"] = "Usuários";
 
 }
 
 <div class="d-flex justify-content-between align-items-center">
     <div>
-        <h1 class="h3">
+        <h1 class=" h4 font-weight-normal">
             @ViewData["Title"]
         </h1>
     </div>
@@ -15,6 +16,33 @@
 </div>
 
 <hr />
-<div class="row">
 
+<div class="d-flex">
+    <table class="table table-hover table-striped">
+        <thead class="bg-info">
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.FirstName)</th>
+                <th>@Html.DisplayNameFor(model => model.LastName)</th>
+                <th>@Html.DisplayNameFor(model => model.Email)</th>
+                <th>@Html.DisplayNameFor(model => model.BirthDate)</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var user in Model)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(model => user.FirstName)</td>
+                    <td>@Html.DisplayFor(model => user.LastName)</td>
+                    <td>@Html.DisplayFor(model => user.Email)</td>
+                    <td>@Html.DisplayFor(model => user.BirthDate)</td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-outline-warning">Editar</a>
+                        <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-sm btn-outline-dark">Visualizar</a>
+                        <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-sm btn-outline-danger">Excluir</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
