--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Aplicação Web</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -20,20 +20,21 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             @*<a asp-controller="Users" asp-action="Index" class="nav-link active">Usuarios</a>*@
-                            <a asp-controller="Users" asp-action="Index" class="nav-link " >Usuários</a>
+                            <a asp-controller="Users" asp-action="Index" class="nav-link ">Usuários</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container-fluid" >
+        <main role="main" class="p-4">
             @RenderBody()
         </main>
+
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer">
         <div class="container">
             &copy; @DateTime.Now.Year - Aplicação Web
         </div>
