--- a/WebApp/Views/Users/Index.cshtml
+++ b/WebApp/Views/Users/Index.cshtml
@@ -4,20 +4,20 @@
 
 }
 
-<div class="d-flex justify-content-between align-items-center">
-    <div>
-        <h1 class=" h4 font-weight-normal">
-            @ViewData["Title"]
-        </h1>
-    </div>
-    <div>
-        <a asp-action="Create" class="btn btn-primary">Novo Usuario</a>
-    </div>
+
+<div class="row">
+    <h1 class=" h4 font-weight-normal">
+        @ViewData["Title"]
+    </h1>
 </div>
+<div  class="row mt-4">
+    <a asp-action="Create" class="btn btn-light">Novo Usuario</a>
+</div>
+
 
 <hr />
 
-<div class="d-flex">
+<div  class="row">
     <table class="table table-hover table-striped">
         <thead class="bg-info">
             <tr>
@@ -38,7 +38,7 @@
                     <td>@Html.DisplayFor(model => user.BirthDate)</td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-outline-warning">Editar</a>
-                        <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-sm btn-outline-dark">Visualizar</a>
+                        <a asp-action="Details" asp-route-id="@user.Id" class="btn btn-sm btn-outline-info">Visualizar</a>
                         <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-sm btn-outline-danger">Excluir</a>
                     </td>
                 </tr>
